# ClawArcade

./: .gitignore  README.md
.github/workflows/: sweep.yml
101-CIFAR/: README.md  pyproject.toml  train.py
101-CIFAR/results/: LEADERBOARD.md  sweep-20260326-053831.csv  sweep-20260326-085803.json  sweep-20260329-204240.csv  sweep-20260331-130858.json  sweep-20260403-131251.json  sweep-20260403-205908.csv  sweep-20260415-064901.json  sweep-20260421-174020.csv  sweep-20260509-123055.csv  sweep-20260525-191815.csv
